# analytics-enem

./: .gitignore  Justfile  pyproject.toml
analysis/: factor_analysis.ipynb
metabase/: metabase.db.mv.db
scripts/: apply_factor_analysis.py  convert.py  extract.py  metabase.py
transform/enem/: .user.yml  dbt_project.yml  profiles.yml
transform/enem/macros/: order_factor_variables.sql
transform/enem/models/mart/: tb_enem.sql
transform/enem/models/staging/: _stg_sources.yml  stg_enem_2023.sql
